[gd_scene load_steps=5 format=3 uid="uid://bakfx5xok0nv5"]

[ext_resource type="Script" uid="uid://bwn5yv28vurs8" path="res://scenes/ability/dagger_ability/dagger_ability.gd" id="1_c503j"]
[ext_resource type="PackedScene" uid="uid://c62i6y0dxibt0" path="res://scenes/component/hitbox_component.tscn" id="2_8a0xo"]
[ext_resource type="Texture2D" uid="uid://c4rvy4sxl5cae" path="res://scenes/ability/dagger_ability/dagger.png" id="3_n6fav"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t6g6y"]
radius = 7.0

[node name="DaggerAbility" type="Node2D"]
script = ExtResource("1_c503j")

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HitboxComponent" parent="." instance=ExtResource("2_8a0xo")]
collision_layer = 6
collision_mask = 41

[node name="CollisionShape" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_t6g6y")

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(2, 0)
rotation = 1.5708
texture = ExtResource("3_n6fav")
